make openbooks save to /config
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/openbooks/Dockerfile
+++ b/apps/openbooks/Dockerfile
@@ -1,9 +1,10 @@
 ARG VERSION
 FROM ghcr.io/evan-buss/openbooks:${VERSION} as upstream
 FROM ghcr.io/elfhosted/ubuntu:focal-20240427@sha256:1b84c219a764d8da5ba0f4b2b1f80e7c6396a8c9dfb499f945549396b53b0821 
-
+ENV DATA_DIR=/config # default to ephemeral storage
+RUN mkdir /config
 WORKDIR /app
 COPY --from=upstream /app/openbooks /app/openbooks
-ENTRYPOINT ["./openbooks", "server", "--dir", "/storage/elfstorage/downloads/completed", "--port", "8000", "--name", "elfhosted-user", "--tls=false", "--persist", "-s irc.irchighway.net:6660", "--no-browser-downloads"]
+ENTRYPOINT ["./openbooks", "server", "--dir", "$DATA_DIR", "--port", "8000", "--name", "elfhosted-user", "--tls=false", "--persist", "-s irc.irchighway.net:6660", "--no-browser-downloads"]
 
 
