--- a/apps/comet/Dockerfile
+++ b/apps/comet/Dockerfile
@@ -27,7 +27,7 @@ ENV POETRY_NO_INTERACTION=1 \
     POETRY_CACHE_DIR=/tmp/poetry_cache \
     HOST=0.0.0.0 \
     FASTAPI_WORKERS=1 \
-    INDEXER_MANAGER_INDEXERS=FAKE_TO_PASS_TESTING \
+    INDEXER_MANAGER_INDEXERS='["FAKE_TO_PASS_TESTING"]' \
     DATABASE_PATH=/config
 
 # Set working directory
