--- a/apps/comet/Dockerfile
+++ b/apps/comet/Dockerfile
@@ -10,40 +10,33 @@ RUN apk update && apk upgrade && \
 RUN git clone  https://github.com/g0ldyy/comet.git /source
 
 
-FROM python:3.11
+
+FROM python:3.11-alpine
 LABEL name="Comet" \
       description="Stremio's fastest torrent/debrid search add-on." \
       url="https://github.com/g0ldyy/comet"
 
-# This is to prevent Python from buffering stdout and stderr
-ENV PYTHONUNBUFFERED=1
-
-# Install Poetry
-RUN pip install poetry
-
-ENV POETRY_NO_INTERACTION=1 \
-    POETRY_VIRTUALENVS_IN_PROJECT=1 \
-    POETRY_VIRTUALENVS_CREATE=1 \
-    POETRY_CACHE_DIR=/tmp/poetry_cache \
-    HOST=0.0.0.0 \
-    FASTAPI_WORKERS=1 \
-    INDEXER_MANAGER_INDEXERS='["FAKE_TO_PASS_TESTING"]' \
-    DATABASE_PATH=/config
-
-# Set working directory
 WORKDIR /app
 
-# Copy the application code
-COPY --from=cloner /source/. ./
+ARG DATABASE_PATH
 
-RUN poetry install --no-root
+ENV PYTHONUNBUFFERED=1 \
+    PYTHONDONTWRITEBYTECODE=1 \
+    POETRY_NO_INTERACTION=1 \
+    POETRY_HOME="/usr/local" \
+    FORCE_COLOR=1 \
+    TERM=xterm-256color \
+    INDEXER_MANAGER_INDEXERS='["FAKE_TO_PASS_TESTING"]'
 
-ENV VIRTUAL_ENV=/app/.venv
-ENV PATH="/app/.venv/bin:$PATH"
+# Fix python-alpine gcc
+RUN apk add --no-cache \
+    gcc \
+    musl-dev \
+    libffi-dev \
+    make
 
-# Set environment variables for uvicorn
-ENV FASTAPI_HOST=0.0.0.0
-ENV FASTAPI_PORT=8000
+RUN pip install poetry
+COPY --from=cloner /source/. .
+RUN poetry install --no-cache --no-root --without dev
 
-# Use uvicorn to run the application
-CMD ["uvicorn", "comet.main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "1"]
+ENTRYPOINT ["poetry", "run", "python", "-m", "comet.main"]
