--- a/apps/zilean/Dockerfile
+++ b/apps/zilean/Dockerfile
@@ -10,31 +10,23 @@ RUN apk update && apk upgrade && \
 RUN git clone https://github.com/iPromKnight/zilean.git /source
 
 # Build Stage
-
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-ENV TARGETARCH=amd64
-COPY --from=cloner /source/. /build
+FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+ARG TARGETARCH
+WORKDIR /build
+COPY --from=cloner /source .
 WORKDIR /build/src/Zilean.ApiService
-RUN dotnet publish -c Release -o /build/out -r linux-$TARGETARCH --self-contained false
+RUN dotnet restore -a $TARGETARCH
+RUN dotnet publish -c Release --no-restore -o /build/out -a $TARGETARCH /p:AssemblyName=zilean
 
 # Run Stage
-FROM mcr.microsoft.com/dotnet/aspnet:8.0-alpine3.19
-
+FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
-
-COPY --from=build /build/out .
-
-RUN addgroup -S zilean && adduser -S -G zilean zilean
-
-RUN mkdir /app/data && chown -R zilean:zilean /app/data
-
+RUN addgroup --system zilean && adduser --system zilean && usermod -aG zilean zilean
+RUN mkdir /app/data && chown -R zilean:zilean /app
 USER zilean
-
 HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
   CMD pgrep -f dotnet || exit 1
-
 ENV ASPNETCORE_URLS=http://+:8181
-
 VOLUME /app/data
-
-ENTRYPOINT ["dotnet", "Zilean.ApiService.dll"]
+COPY --from=build /build/out .
+ENTRYPOINT ["./zilean"]
