--- a/apps/comet/Dockerfile
+++ b/apps/comet/Dockerfile
@@ -23,8 +23,7 @@ ENV PYTHONUNBUFFERED=1 \
     POETRY_HOME="/usr/local" \
     FORCE_COLOR=1 \
     TERM=xterm-256color \
-    INDEXER_MANAGER_INDEXERS='["FAKE_TO_PASS_TESTING"]' \
-    DATABASE_PATH=/tmp
+    INDEXER_MANAGER_INDEXERS='["FAKE_TO_PASS_TESTING"]'
 
 # Fix python-alpine gcc
 RUN apk add --no-cache \
