--- a/apps/kometa/restricted.tmux.conf
+++ b/apps/kometa/restricted.tmux.conf
@@ -18,5 +18,5 @@ set -g default-terminal "tmux"
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 # resize as requested
-set -g window-size latest
+# set -g window-size latest
 setw -g aggressive-resize on
