--- a/apps/comet/Dockerfile
+++ b/apps/comet/Dockerfile
@@ -6,7 +6,7 @@ ARG VERSION
 RUN apk update && apk upgrade && \
     apk add --no-cache git
 
-RUN git clone  https://github.com/g0ldyy/comet.git /source
+RUN git clone -b $VERSION https://github.com/g0ldyy/comet.git /source
 
 
 FROM python:3.11-alpine
