--- a/apps/zilean/Dockerfile
+++ b/apps/zilean/Dockerfile
@@ -16,17 +16,24 @@ WORKDIR /build
 COPY --from=cloner /source .
 WORKDIR /build/src/Zilean.ApiService
 RUN dotnet restore -a $TARGETARCH
-RUN dotnet publish -c Release --no-restore -o /build/out -a $TARGETARCH /p:AssemblyName=zilean
+RUN dotnet publish -c Release --no-restore -o /build/out -a $TARGETARCH
+WORKDIR /build/src/Zilean.DmmScraper
+RUN dotnet restore -a $TARGETARCH
+RUN dotnet publish -c Release --no-restore -o /build/out -a $TARGETARCH
 
 # Run Stage
-FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/aspnet:8.0
+FROM mcr.microsoft.com/dotnet/aspnet:8.0
+
+RUN apt-get update && apt-get install -y \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
+
+ENV DOTNET_RUNNING_IN_CONTAINER=true
+ENV DOTNET_gcServer=1
+ENV DOTNET_GCDynamicAdaptationMode=1
+ENV DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=true
 WORKDIR /app
-RUN addgroup --system zilean && adduser --system zilean && usermod -aG zilean zilean
-RUN mkdir /app/data && chown -R zilean:zilean /app
-USER zilean
-HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
-  CMD pgrep -f dotnet || exit 1
 ENV ASPNETCORE_URLS=http://+:8181
 VOLUME /app/data
 COPY --from=build /build/out .
-ENTRYPOINT ["./zilean"]
+ENTRYPOINT ["./zilean-api"]
