don't need fake values to pass testing anymore
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/comet/Dockerfile
+++ b/apps/comet/Dockerfile
@@ -22,9 +22,7 @@ ENV PYTHONUNBUFFERED=1 \
     POETRY_NO_INTERACTION=1 \
     POETRY_HOME="/usr/local" \
     FORCE_COLOR=1 \
-    TERM=xterm-256color \
-    INDEXER_MANAGER_INDEXERS='["FAKE_TO_PASS_TESTING"]' \
-    INDEXER_MANAGER_API_KEY='fakeapikey'
+    TERM=xterm-256color
 
 # Fix python-alpine gcc
 RUN apk add --no-cache \
