--- a/apps/comet/Dockerfile
+++ b/apps/comet/Dockerfile
@@ -22,7 +22,9 @@ ENV PYTHONUNBUFFERED=1 \
     POETRY_NO_INTERACTION=1 \
     POETRY_HOME="/usr/local" \
     FORCE_COLOR=1 \
-    TERM=xterm-256color
+    TERM=xterm-256color \
+    INDEXER_MANAGER_INDEXERS='["DMM public hash shares only"]' \
+    INDEXER_MANAGER_API_KEY='fakeapikey'
 
 # Fix python-alpine gcc
 RUN apk add --no-cache \
