--- a/apps/riven-frontend/ci/goss.yaml
+++ b/apps/riven-frontend/ci/goss.yaml
@@ -1,10 +1,10 @@
 ---
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#process
-process:
-  python:
-    running: true
-  xterm:
-    running: true    
+# process:
+#   python:
+#     running: true
+#   xterm:
+#     running: true    
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
 port:
