--- a/apps/riven-frontend/ci/goss.yaml
+++ b/apps/riven-frontend/ci/goss.yaml
@@ -11,6 +11,6 @@ port:
     listening: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
-http:
-  http://localhost:3000:
-    status: 200
+# http:
+#   http://localhost:3000:
+#     status: 200
