make riven play nice with 080
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/riven/Dockerfile
+++ b/apps/riven/Dockerfile
@@ -22,7 +22,7 @@ RUN apk add --no-cache \
     curl
 
 # Upgrade pip and install poetry
-RUN pip install --upgrade pip && pip install poetry==1.4.2
+RUN pip install --upgrade pip && pip install poetry==1.8.3
 
 ENV POETRY_NO_INTERACTION=1 \
     POETRY_VIRTUALENVS_IN_PROJECT=1 \
@@ -35,61 +35,36 @@ COPY --from=cloner /source/pyproject.toml /source/poetry.lock ./
 RUN touch README.md
 RUN poetry install --without dev --no-root && rm -rf $POETRY_CACHE_DIR
 
-# Frontend Builder
-FROM node:20-alpine AS frontend
-WORKDIR /app
-COPY --from=cloner /source/frontend/package*.json ./
-RUN npm install -g pnpm && pnpm install
-COPY --from=cloner /source/frontend/ .
-RUN pnpm run build && pnpm prune --prod
-
 # Final Image
 FROM python:3.11-alpine
 
-LABEL name="Iceberg" \
-      description="Iceberg Debrid Downloader" \
-      url="https://github.com/dreulavelle/riven"
+LABEL name="Riven" \
+      description="Riven Media Server" \
+      url="https://github.com/rivenmedia/riven"
 
 
 # Install system dependencies and Node.js
 ENV PYTHONUNBUFFERED=1
 RUN apk add --no-cache \
     curl \
-    fish \
     shadow \
-    nodejs \
-    dumb-init \
-    npm \
     rclone \
-    fontconfig \
     unzip \
     gcc \
     musl-dev \
     libffi-dev \
-    py3-pip \
-    tmux \
-    make \
-    build-base \
+    python3-dev \
+    libpq-dev \
     ttyd \
     git \
-    python3-dev && \
-    npm install -g pnpm
-
-# Install Nerd Fonts
-RUN mkdir -p /usr/share/fonts/nerd-fonts && \
-    curl -fLo "/usr/share/fonts/nerd-fonts/FiraCode.zip" \
-    https://github.com/ryanoasis/nerd-fonts/releases/download/v2.1.0/FiraCode.zip && \
-    unzip /usr/share/fonts/nerd-fonts/FiraCode.zip -d /usr/share/fonts/nerd-fonts && \
-    rm /usr/share/fonts/nerd-fonts/FiraCode.zip && \
-    fc-cache -fv
+    tmux
 
 # Create user and group
 RUN addgroup -g 568 elfie && \
 adduser -u 568 -G elfie -h /config -D elfie
 
-
-# Expose ports
-EXPOSE 3000 8080 5572
+# Install Poetry
+RUN pip install poetry==1.8.3
 
 # Set environment variable to force color output
 ENV FORCE_COLOR=1
@@ -100,31 +75,26 @@ COPY --chown=568:568 apps/riven/riven.sh /riven/
 COPY --chown=568:568 apps/riven/launch-tmux.sh /riven/
 COPY --chown=568:568 apps/riven/entrypoint.sh /riven/
 COPY --chown=568:568 apps/riven/restricted.tmux.conf /riven/
-COPY --chown=568:568 --chmod=755 apps/riven/wait-for-it.sh /usr/local/bin/
-
-# # Ensure entrypoint script is executable
-RUN chmod +x /riven/entrypoint.sh
+ADD --chmod=755 https://raw.githubusercontent.com/eficode/wait-for/master/wait-for /usr/local/bin/
 
 USER 568
 # Set working directory
 WORKDIR /riven
 
-# Copy the rest of the application code
-COPY --chown=568:568 --from=cloner /source/backend/ /riven/backend
-COPY --chown=568:568 --from=cloner /source/pyproject.toml /source/poetry.lock /riven/backend/
-COPY --chown=568:568 --from=cloner /source/VERSION /riven/
-COPY --chown=568:568 --from=frontend /app/build /riven/frontend/build
-COPY --chown=568:568 --from=frontend /app/node_modules /riven/frontend/node_modules
-COPY --chown=568:568 --from=frontend /app/package.json /riven/frontend/package.json
-
-
 # Copy the virtual environment from the builder stage
 COPY --chown=568:568 --from=builder /app/.venv /app/.venv
 ENV VIRTUAL_ENV=/app/.venv
 ENV PATH="/app/.venv/bin:$PATH"
+# ElfHosted will just use sqlite
+ENV RIVEN_DATABASE_HOST=sqlite:///riven/data/riven.db 
 
-# Install Poetry
-RUN pip install poetry==1.4.2 
+# Copy the rest of the application code
+COPY --from=cloner /source/backend/ /riven/backend
+COPY --from=cloner /source/pyproject.toml /source/poetry.lock /riven/backend/
+COPY --from=cloner /source/VERSION /riven/
+
+# # Install Poetry
+# RUN pip install poetry==1.8.3
 
 # && \
 #     poetry install --no-root --without dev
