--- a/apps/formulio/Dockerfile
+++ b/apps/formulio/Dockerfile
@@ -9,39 +9,54 @@ RUN apk update && apk upgrade && \
 
 RUN git clone  https://github.com/TheRaceDirector/formuliodev.git /source
 
-FROM python:3.10.12
+# Build stage
+FROM python:3.10.14-slim-bookworm AS builder
+
+# Set the working directory
+WORKDIR /app
+
+# Copy requirements file
+COPY --from=cloner /source/requirements.txt .
+
+# Install Python dependencies
+RUN pip install --upgrade pip setuptools wheel && \
+    pip install --no-cache-dir -r requirements.txt
+
+# Final stage
+FROM python:3.10.14-slim-bookworm
+
+# Copy installed packages from builder stage
+COPY --from=builder /usr/local/lib/python3.10/site-packages /usr/local/lib/python3.10/site-packages
+COPY --from=builder /usr/local/bin /usr/local/bin
 
 # Add a non-root user
 RUN groupadd -r appuser && useradd -r -g appuser -s /bin/bash -d /home/appuser appuser
 
-# Set the working directory to /tmp/app
-WORKDIR /tmp/app
+# Set the working directory
+WORKDIR /app
 
-# Copy requirements.txt first for Docker cache optimization
-COPY --from=cloner /source/requirements.txt ./
-
-# Install necessary packages
-RUN apt-get update && \
-    apt-get install -y build-essential libboost-system-dev libboost-python-dev libssl-dev libtorrent-rasterbar-dev && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
-
-# Install Python dependencies
-RUN pip install --upgrade pip setuptools wheel && \
-    pip install -r requirements.txt
-
-# Copy the rest of the application code
+# Copy the application code
 COPY --from=cloner /source/. .
+COPY apps/formulio/branding/index.html static/
 
-# Make the /tmp/app directory writable by all users
-RUN chmod -R 777 /tmp/app
+# Set the PYTHONPATH
+ENV PYTHONPATH=/app
 
-# Make all 0run_scripts.py scripts and their dependencies executable
-RUN find . -name "0run_scripts.py" -exec chmod +x {} + && \
-    find . -name "*.py" -exec chmod +x {} +
+# Make the /app directory writable by all users
+# RUN chmod -R 777 /app
+
+# Create log directory and set permissions
+RUN mkdir -p /var/log/gunicorn && chown appuser:appuser /var/log/gunicorn
 
 # Switch to the non-root user
 USER appuser
 
+# Healthcheck
+HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
+  CMD curl -f http://localhost:8000/ || exit 1
+
 # Command to run the application
-CMD ["python3", "formulio-addon.py"]
+CMD ["gunicorn", "-c", "gunicorn_config.py", "formulio_addon:app"]
+
+# Expose port 8000
+EXPOSE 8000
