update to latest
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/riven/Dockerfile
+++ b/apps/riven/Dockerfile
@@ -89,8 +89,8 @@ ENV PATH="/app/.venv/bin:$PATH"
 ENV RIVEN_DATABASE_HOST=sqlite:///riven/data/riven.db 
 
 # Copy the rest of the application code
-COPY --from=cloner /source/backend/ /riven/backend
-COPY --from=cloner /source/pyproject.toml /source/poetry.lock /riven/backend/
+COPY --from=cloner /source/src/ /riven/src
+COPY --from=cloner /source/pyproject.toml /source/poetry.lock /riven/src/
 COPY --from=cloner /source/VERSION /riven/
 
 # # Install Poetry
