improve on access to PTS config
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/filebrowser/Dockerfile
+++ b/apps/filebrowser/Dockerfile
@@ -65,7 +65,8 @@ ADD --chmod=755 https://github.com/tsl0922/ttyd/releases/download/1.7.7/ttyd.x86
 RUN cp -p /bin/bash /bin/vstat
 
 # Run elfie in rbash
-RUN usermod -s /bin/rbash elfie
+RUN usermod -s /bin/rbash elfie &&
+    ln -sf /home/elfie/.config/ /storage/config/elfterm
 
 RUN mkdir /storage
 
@@ -74,7 +75,8 @@ COPY --chown=568:568 apps/filebrowser/root /
 USER 568
 
 # We need plextraktsync
-RUN pipx install PlexTraktSync
+RUN pipx install PlexTraktSync &&
+    sed -i -e 's/timeout: 30/timeout: 3600' /home/elfie/.config/PlexTraktSync/config.yml
 
 EXPOSE 8080
 
