let ILIKEDANGER wipe riven's DB first
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/riven/Dockerfile
+++ b/apps/riven/Dockerfile
@@ -55,7 +55,8 @@ RUN apk add --no-cache \
     libpq-dev \
     ttyd \
     git \
-    tmux
+    tmux \
+    dialog
 
 # Create user and group
 RUN addgroup -g 568 elfie && \
