add wgcf to tooling
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/tooling/Dockerfile
+++ b/apps/tooling/Dockerfile
@@ -86,6 +86,9 @@ RUN curl -fSsL https://www.postgresql.org/media/keys/ACCC4CF8.asc | gpg --dearmo
 	apt-get update && \
 	apt -y install postgresql-client-15	
 
+# get wgcf (for generating WARP wireguard configs)
+ADD --chmod=755  https://github.com/ViRb3/wgcf/releases/download/v2.2.22/wgcf_2.2.22_linux_amd64 /usr/local/bin/wgcf
+
 # Setup s3cmd config
 # hadolint ignore=SC2016
 RUN { \
