--- a/apps/stremio-easynews-addon/ci/goss.yaml
+++ b/apps/stremio-easynews-addon/ci/goss.yaml
@@ -1,18 +1,18 @@
 ---
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#process
-process:
-  python:
-    running: true
-  xterm:
-    running: true    
+# process:
+#   npm:
+#     running: true
+#   xterm:
+#     running: true    
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
 port:
   # https://github.com/aelsabbahy/goss/issues/149
-  tcp:3000:
+  tcp:1337:
     listening: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
 http:
-  http://localhost:3000:
+  http://localhost:1337:
     status: 200
