--- a/apps/shluflix/Dockerfile
+++ b/apps/shluflix/Dockerfile
@@ -9,9 +9,10 @@ RUN apk update && apk upgrade && \
 
 RUN git clone  https://bitbucket.org/shluflix-stremio/shluflix.git /source
 
-FROM ghcr.io/elfhosted/alpine-node:20@sha256:34e579ce8fd045ec28105d0ee720e6d4b8fd332ebeb8d4890784b8b991d51e29
+FROM ghcr.io/elfhosted/alpine-node:20@sha256:6012d04af741b80f2c2d21fe6088a2c096383fdb4269567f837e500af888dd69
 WORKDIR /app
 COPY --from=cloner /source .
 COPY apps/shluflix/branding/landingTemplate.js .
+COPY apps/shluflix/branding/addon.js .
 RUN npm install
 CMD ["npm", "start"]
