--- a/apps/audiobookshelf/ci/goss.yaml
+++ b/apps/audiobookshelf/ci/goss.yaml
@@ -5,12 +5,12 @@ process:
     running: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
-port:
-  # https://github.com/aelsabbahy/goss/issues/149
-  tcp6:8000:
-    listening: true
+# port:
+#   # https://github.com/aelsabbahy/goss/issues/149
+#   tcp6:8000:
+#     listening: true
 
-# https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
-http:
-  http://localhost:8000:
-    status: 200
+# # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
+# http:
+#   http://localhost:8000:
+#     status: 200
