--- a/apps/audiobookshelf/ci/goss.yaml
+++ b/apps/audiobookshelf/ci/goss.yaml
@@ -4,13 +4,13 @@ process:
   node:
     running: true
 
-# https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
-# port:
-#   # https://github.com/aelsabbahy/goss/issues/149
-#   tcp6:8000:
-#     listening: true
+https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
+port:
+  # https://github.com/aelsabbahy/goss/issues/149
+  tcp6:8000:
+    listening: true
 
-# # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
-# http:
-#   http://localhost:8000:
-#     status: 200
+# https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
+http:
+  http://localhost:8000:
+    status: 200
