add libtorrent to riven dockerfile
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/riven/Dockerfile
+++ b/apps/riven/Dockerfile
@@ -53,6 +53,7 @@ RUN apk add --no-cache \
     libffi-dev \
     python3-dev \
     libpq-dev \
+    libtorrent \
     ttyd \
     git \
     tmux \
