improve riven's db-resetting power
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/riven/Dockerfile
+++ b/apps/riven/Dockerfile
@@ -57,7 +57,8 @@ RUN apk add --no-cache \
     ttyd \
     git \
     tmux \
-    dialog
+    dialog \
+    postgresql-client
 
 # Create user and group
 RUN addgroup -g 568 elfie && \
