--- a/apps/riven/restricted-dev.tmux.conf
+++ b/apps/riven/restricted-dev.tmux.conf
@@ -1,5 +1,5 @@
 # Always launch PD
-set -g default-command "/riven/riven.sh"
+set -g default-command "/riven/riven-dev.sh"
 
 # "lock down" tmux
 unbind C-b
