fix riven dev image
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/riven/Dockerfile
+++ b/apps/riven/Dockerfile
@@ -73,12 +73,17 @@ ENV TERM=xterm-256color
 
 # Add the components for tmux-in-wetty
 COPY --chown=568:568 apps/riven/riven.sh /riven/
-COPY --chown=568:568 apps/riven/launch-tmux.sh /riven/
-COPY --chown=568:568 apps/riven/entrypoint.sh /riven/
 COPY --chown=568:568 apps/riven/riven-dev.sh /riven/
+
+COPY --chown=568:568 apps/riven/launch-tmux.sh /riven/
 COPY --chown=568:568 apps/riven/launch-tmux-dev.sh /riven/
+
+COPY --chown=568:568 apps/riven/entrypoint.sh /riven/
 COPY --chown=568:568 apps/riven/entrypoint-dev.sh /riven/
+
 COPY --chown=568:568 apps/riven/restricted.tmux.conf /riven/
+COPY --chown=568:568 apps/riven/restricted-dev.tmux.conf /riven/
+
 ADD --chmod=755 https://raw.githubusercontent.com/eficode/wait-for/master/wait-for /usr/local/bin/
 
 USER 568
